--- a/ui.frontend/src/index.css
+++ b/ui.frontend/src/index.css
@@ -23,5 +23,6 @@
 }
 
 .btn-primary {
-    @apply w-full texr-sm font-medium text-white bg-violet-500 shadow-lg shadow-purple-600/5 p-[10px] rounded-md my-1 hover:bg-purple-600/15 hove:text-purple-600;
+    @apply w-full text-sm font-medium text-white bg-violet-500 shadow-lg shadow-purple-600/5 p-[10px] rounded-md my-1 hover:bg-purple-600/15 hover:text-purple-600;
 }
+
